--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -23,11 +23,11 @@
                 </div>
 
                 <div class="form-group col-xs-12">
-                    <div class="select-box">
+                    <div class="select-box styling-input-list">
                         <ui-select ng-model="driver.truckId" theme="select2"
                                    style="min-width: 390px;"
                                    title="Choose a Truck" append-to-body="true">
-                            <ui-select-match placeholder="Select a Truck" class="form-control custom-form-control">
+                            <ui-select-match class="form-control custom-form-control">
                                 {{$select.selected.registrationNo || truckRegNo}}
                             </ui-select-match>
                             <ui-select-choices
@@ -35,6 +35,7 @@
                                 <div ng-bind-html="truck.registrationNo | highlight: $select.search"></div>
                             </ui-select-choices>
                         </ui-select>
+                        <label class="focus-effect-for-input" aria-hidden="true">Select a Truck</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
