--- a/client/views/partials/gps/gpsReports.html
+++ b/client/views/partials/gps/gpsReports.html
@@ -5,14 +5,14 @@
                 <div class="col-sm-1 pall-zero"><h3 class="gpsTitle">Reports</h3></div>
                 <div class="col-sm-2 pall-zero">
                     <div class="form-details ">
-                        <date-picker class="'textfield br-one'" ban-future="'banFutureDate'"
-                                     ng-model="reportParams.startDate"></date-picker>
+                        <date-picker class="'textfield br-one'" past-present="'pastPresentDate'"
+                                     ng-model="reportParams.startDate" placeholder="'from date'"></date-picker>
                     </div>
                 </div>
                 <div class="col-sm-2 pall-zero">
                     <div class="form-details">
-                        <date-picker class="'textfield'" ban-future="'banFutureDate'"
-                                     ng-model="reportParams.endDate"></date-picker>
+                        <date-picker class="'textfield'" past-present="'pastPresentDate'"
+                                     ng-model="reportParams.endDate" placeholder="'to date'"></date-picker>
                     </div>
                 </div>
 
